--- a/sui微信界面/index.html
+++ b/sui微信界面/index.html
@@ -13,6 +13,9 @@
 				width: 50%;
 				margin: 0 auto;
 			}
+			#msg-page,#ab-page,#star-page{
+				animation: none !important;
+			}
 		</style>
 
 	</head>
@@ -21,7 +24,7 @@
 
 		<div class="page-group">
 			<!--消息页面-->
-			<div class="page page-current" id="msg-page" style="transform: none !important;">
+			<div class="page page-current" id="msg-page">
 				<!--导航条-->
 				<header class="bar bar-nav">
 					<a class="icon icon-me pull-left"></a>
@@ -57,7 +60,7 @@
 			</div>
 
 			<!--联系人页面-->
-			<div class="page" id="ab-page" style="transform: none !important;">
+			<div class="page" id="ab-page">
 				<!--导航条-->
 				<header class="bar bar-nav">
 					<a class="icon icon-me pull-left"></a>
@@ -89,7 +92,7 @@
 			</div>
 
 			<!--动态页面-->
-			<div class="page" id="star-page" style="transform: none !important;">
+			<div class="page" id="star-page">
 				<!--导航条-->
 				<header class="bar bar-nav">
 					<a class="icon icon-me pull-left"></a>
