--- a/sui微信界面/index.html
+++ b/sui微信界面/index.html
@@ -14,6 +14,7 @@
 				margin: 0 auto;
 			}
 			#msg-page,#ab-page,#star-page{
+				-webkit-animation: none !important;
 				animation: none !important;
 			}
 		</style>
