侧边栏功能

--- a/sui微信界面/index.html
+++ b/sui微信界面/index.html
@@ -17,6 +17,15 @@
 				-webkit-animation: none !important;
 				animation: none !important;
 			}
+			#info-panel{
+				background-color: white;
+			}
+			#self-head{
+				width: 3rem;
+				height: 3rem;
+				margin :0 auto;
+				border-radius: 50%;
+			}
 		</style>
 
 	</head>
@@ -28,7 +37,7 @@
 			<div class="page page-current" id="msg-page">
 				<!--导航条-->
 				<header class="bar bar-nav">
-					<a class="icon icon-me pull-left"></a>
+					<a class="icon icon-me pull-left open-panel" data-panel="#info-panel"></a>
 					<button class="button pull-right"><b>＋</b></button>
 					<div class="buttons-row" id="btn-title">
 						<a href="" class="tab-link active button">消息</a>
@@ -53,7 +62,7 @@
 					</a>
 				</nav>
 				<!--内容区-->
-				<div class="content">
+				<div class="content close-panel">
 					<div class="content-block">
 						这里是好友列表
 					</div>
@@ -123,9 +132,13 @@
 					</div>
 				</div>
 			</div>
-			<div class="panel panel-left" id="info-panel">
+
+			<!--侧边栏-->
+			<div class="panel panel-left panel-reveal" id="info-panel">
 				<div class="content-block">
-					<p>这是侧边栏</p>
+					<div id="self-info">
+						<img id="self-head" src="img/head.jpg" alt="">
+					</div>
 				</div>
 			</div>
 		</div>
